--- a/css/styles.css
+++ b/css/styles.css
@@ -64,8 +64,8 @@ body {
 /* -------------------HEADER------------------- */
 
 .header {
-  padding-top: 32px;
-  padding-bottom: 32px;
+  padding-top: 24px;
+  padding-bottom: 25px;
   border-bottom: 1px solid #ececec;
 }
 
@@ -266,13 +266,18 @@ body {
   border-radius: 0px 0px 4px 4px;
 }
 
+.team-description {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  /* padding: 30px auto 30px auto; */
+}
+
 .team-name-surname {
   font-size: 16px;
   font-weight: 500;
   line-height: calc(19 / 16);
   text-align: center;
   letter-spacing: 0.03em;
-  margin-top: 30px;
   margin-bottom: 10px;
 }
 
@@ -283,7 +288,6 @@ body {
   letter-spacing: 0.03em;
   color: var(--contacts-color);
   margin-top: 10px;
-  margin-bottom: 30px;
 }
 
 /* -------------------PORTFOLIO------------------- */
@@ -339,7 +343,12 @@ body {
 .portfolio-item {
   width: 370px;
   box-sizing: border-box;
+}
+
+.portfolio-description {
+  padding: 20px 24px;
   border: 1px solid #eeeeee;
+  border-top: 0;
 }
 
 .portfolio-title {
@@ -347,9 +356,7 @@ body {
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--second-color);
-  margin-top: 20px;
   margin-bottom: 4px;
-  margin-left: 24px;
 }
 
 .portfolio-after-title {
@@ -357,8 +364,6 @@ body {
   line-height: 1.9;
   letter-spacing: 0.03em;
   color: var(--contacts-color);
-  margin-bottom: 20px;
-  margin-left: 24px;
 }
 
 /* -------------------FOOTER------------------- */
@@ -379,8 +384,11 @@ body {
 }
 
 .footer-item {
-  margin-top: 9px;
   margin-bottom: 9px;
+}
+
+.footer-item:last-child {
+  margin-bottom: 0;
 }
 
 .footer-location {
